--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ numpy==1.24.3
 pillow==10.1.0
 
 # Visão Computacional
-opencv-python==4.8.1.78
+opencv-python-headless==4.8.1.78
 scikit-image==0.22.0
 
 # OCR (para detecção de texto)
