--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,20 @@
-# MirrorGlass V2 - Requirements
-# Sistema Integrado de Detecção de Fraudes por IA
+# MirrorGlass V2 - Requirements (Compatível com Streamlit Cloud)
 
 # Core
-streamlit==1.28.0
-numpy==1.24.3
-pillow==10.1.0
+streamlit>=1.28.0
+numpy>=1.24.0,<2.0.0
+pillow>=10.0.0
 
-# Visão Computacional
-opencv-python-headless==4.8.1.78
-scikit-image==0.22.0
+# Visão Computacional - VERSÕES COMPATÍVEIS
+opencv-python-headless>=4.8.0
+scikit-image>=0.21.0
 
 # OCR (para detecção de texto)
-pytesseract==0.3.10
+pytesseract>=0.3.10
 
 # Análise de Dados
-pandas==2.1.3
-scipy==1.11.4
+pandas>=2.0.0
+scipy>=1.11.0
 
-# Visualização (opcional)
-matplotlib==3.8.2
+# Visualização
+matplotlib>=3.7.0
