--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit==1.24.0
-numpy==1.23.5
-pillow==9.5.0
-matplotlib==3.7.1
-pandas==2.0.3
-scikit-learn==1.2.2
-scikit-image==0.20.0
-opencv-python-headless==4.8.0.74
+streamlit==1.28.0
+numpy==1.24.3
+Pillow==10.1.0
+matplotlib==3.8.2
+pandas==2.1.3
+scikit-learn==1.3.2
+scikit-image==0.22.0
+opencv-python-headless==4.8.1.78
+scipy==1.11.4
